--- a/modules/recipe-api-content/recipe-api-style.css
+++ b/modules/recipe-api-content/recipe-api-style.css
@@ -247,12 +247,20 @@ small.arrow::before {
 .modal-content h3 {
   margin-bottom: 10px;
 }
+
+.modal-content h3.instructions {
+  margin-bottom: 10px;
+  border-top: 1px solid #07c837;
+  width: 80%;
+  padding-top: 15px;
+}
+
 .modal-content ul {
   list-style-type: square;
   width: 80%;
-  padding-left: 15px;
-  padding-bottom: 10px;
-  margin-bottom: 15px;
+  padding: 15px 0 10px 15px;
+  margin: 15px 0;
+  border-top: 1px solid #07c837;
   border-bottom: 1px solid #07c837;
 }
 .modal-content ul h4 {
@@ -261,7 +269,7 @@ small.arrow::before {
 .modal-content ul li {
   margin-bottom: 5px;
 }
-.modal-content span.summary {
+.modal-content span {
   line-height: 30px;
   margin-bottom: 15px;
   width: 70%;
@@ -272,7 +280,7 @@ small.arrow::before {
   cursor: pointer;
 }
 
-.modal .modal-content span.summary.show {
+.modal .modal-content span.show {
   width: 100%;
   overflow: initial;
   white-space: unset;
