--- a/modules/recipe-api-content/recipe-api-style.css
+++ b/modules/recipe-api-content/recipe-api-style.css
@@ -7,6 +7,11 @@
   box-sizing: border-box;
 }
 
+body #main {
+  background: #242423;
+  overflow: hidden;
+}
+
 .hidden {
   pointer-events: none !important;
   opacity: 0 !important;
@@ -84,10 +89,17 @@ small.arrow::before {
   text-align: left;
   width: 100%;
 }
-
-#formData {
+#sidebar #ingredientsList {
+  height: 42vh;
+}
+#sidebar #usedIngredients {
+  height: 20vh;
+  overflow-y: auto;
+}
+#sidebar #formData {
   padding: 10px 0;
   width: 100%;
+  height: 18vh;
 }
 
 #formData input {
@@ -184,6 +196,14 @@ small.arrow::before {
   transition: all 0.3s ease-in-out;
   height: 100vh;
   overflow-y: auto;
+  position: relative;
+}
+#list button.scroll {
+  position: fixed;
+  bottom: 25px;
+  right: 20px;
+  opacity: 0;
+  pointer-events: none;
 }
 
 #list .single {
@@ -356,4 +376,53 @@ small.arrow::before {
 }
 .single #loading {
   margin: -10px 0 10px 30px;
+}
+
+/* breakpoints mid and mobile */
+
+@media (max-width: 1200px) {
+  #sidebar {
+    width: 40vw;
+    /* padding: 10px 10px 10px 5px; */
+  }
+  #formData label {
+    font-size: 10px;
+  }
+  #sidebar #ingredientsList button {
+    padding: 4px;
+  }
+}
+
+@media (max-width: 560px) {
+  #sidebar {
+    width: 100vw;
+    padding: 10px 15px;
+  }
+  #sidebar #ingredientsList {
+    height: 45vh;
+  }
+  #sidebar #ingredientsList .group-bar {
+    margin-bottom: 10px;
+  }
+  #sidebar #ingredientsList button {
+    margin-bottom: 10px;
+  }
+  #sidebar #ingredientsList .group-ingredients {
+    height: 120px;
+  }
+
+  #formData label {
+    font-size: 12px;
+  }
+  #sidebar #ingredientsList button {
+    padding: 5px;
+  }
+  #list {
+    max-width: 100%;
+    width: 100%;
+  }
+  #list button.scroll {
+    opacity: 1;
+    pointer-events: all;
+  }
 }
