--- a/modules/recipe-api-content/recipe-api-style.css
+++ b/modules/recipe-api-content/recipe-api-style.css
@@ -86,6 +86,11 @@ small.arrow::before {
   right: 20px;
 }
 
+#sidebar button#init.inactive {
+  opacity: 0.3;
+  pointer-events: none;
+}
+
 #sidebar h3 {
   margin-bottom: 10px;
 }
