--- a/modules/memo-content/memo-style.css
+++ b/modules/memo-content/memo-style.css
@@ -37,6 +37,7 @@ body {
   right: 0;
   z-index: 10;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   transition: all 1s ease-in-out;
@@ -45,8 +46,15 @@ body {
   color: #ffffff;
   text-transform: uppercase;
   text-align: center;
-  font-size: 10rem;
+  font-size: 8rem;
   font-weight: 300;
+}
+#win button {
+  color: rgb(88, 88, 88);
+  background: #fff;
+  border: none;
+  padding: 10px 15px;
+  text-transform: uppercase;
 }
 
 @keyframes win-animation {
