--- a/modules/autocomplete-demo/autocomplete-demo-style.css
+++ b/modules/autocomplete-demo/autocomplete-demo-style.css
@@ -23,14 +23,20 @@
 
 .autocomplete-container .autocomplete-list {
   width: 100%;
-  max-height: 30vh;
-  overflow-y: auto;
+  /* max-height: 30vh;
+  overflow-y: auto; */
+  position: relative;
 }
 
 .autocomplete-container .autocomplete-list ul {
   list-style: none;
   padding: 0;
   margin-bottom: 20px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1000;
 }
 
 .autocomplete-container .autocomplete-list ul li {
@@ -38,6 +44,7 @@
   border-top: none;
   padding: 10px;
   cursor: pointer;
+  background: white;
 }
 .autocomplete-container .autocomplete-list ul li:hover {
   background: #ededed;
