--- a/modules/recipe-api-content/recipe-api-style.css
+++ b/modules/recipe-api-content/recipe-api-style.css
@@ -7,6 +7,11 @@
   box-sizing: border-box;
 }
 
+body.fix {
+  position: fixed;
+  width: 100%;
+}
+
 body #main {
   background: #242423;
   overflow: hidden;
