testing virtual keyboard fix take two

--- a/modules/recipe-api-content/recipe-api-style.css
+++ b/modules/recipe-api-content/recipe-api-style.css
@@ -7,9 +7,34 @@
   box-sizing: border-box;
 }
 
-body.fix {
-  position: fixed;
-  width: 100%;
+@media (max-width: 560px) {
+  body.fix {
+    position: relative !important;
+    /* width: 100%; */
+  }
+  body.fix #sidebar {
+    margin: 10px 15px;
+  }
+
+  body.fix #sidebar #formData {
+    position: absolute !important;
+    top: 0 !important;
+    left: 0 !important;
+    right: 0 !important;
+  }
+  body.fix #sidebar #ingredientsList {
+    position: absolute !important;
+    top: 14vh !important;
+    left: 0 !important;
+    right: 0 !important;
+  }
+  body.fix #sidebar #usedIngredients {
+    position: absolute !important;
+    top: 64vh !important;
+    left: 0 !important;
+    right: 0 !important;
+    /* display: none !important; */
+  }
 }
 
 body #main {
