--- a/modules/recipe-api-content/recipe-api-style.css
+++ b/modules/recipe-api-content/recipe-api-style.css
@@ -514,11 +514,12 @@ small.arrow::before {
 }
 
 .autocomplete-container .autocomplete-input {
-  padding: 10px;
+  padding: 8px;
   width: 100%;
   background: #242423;
   color: #fff;
   border: 1px solid #07c837;
+  font-size: 14px;
 }
 .autocomplete-container .autocomplete-input:focus {
   border: 1px solid #fff;
@@ -549,6 +550,7 @@ small.arrow::before {
   cursor: pointer;
   background: #242423;
   color: #fff;
+  font-size: 14px;
 }
 .autocomplete-container .autocomplete-list ul li:hover {
   background: #07c837;
