--- a/modules/recipe-api-content/recipe-api-style.css
+++ b/modules/recipe-api-content/recipe-api-style.css
@@ -7,6 +7,13 @@
   box-sizing: border-box;
 }
 
+@media (max-width: 560px) {
+  body.fix {
+    position: relative !important;
+    /* width: 100%; */
+  }
+}
+
 @media (max-width: 400px) {
   #sidebar #usedIngredients #ingredientsWindow {
     height: 10vh;
