minor text/style changes

--- a/modules/recipe-api-content/recipe-api-style.css
+++ b/modules/recipe-api-content/recipe-api-style.css
@@ -167,6 +167,7 @@ small.arrow::before {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  margin-right: -5px;
 }
 
 #sidebar #ingredientsList .group-bar .group-item {
