--- a/modules/recipe-api-content/recipe-api-style.css
+++ b/modules/recipe-api-content/recipe-api-style.css
@@ -67,6 +67,62 @@ small.arrow::before {
   left: -13px;
 }
 
+/* arrow left and right: */
+
+div#num-container {
+  display: flex;
+  align-items: center;
+}
+
+div#num-container label {
+  margin-left: 15px;
+}
+
+div#num-val {
+  border: 1px solid #fff;
+  padding: 2px 5px;
+  width: 33px;
+  margin: 0 7px;
+}
+
+div#num-less {
+  position: relative;
+  height: 15px;
+  width: 15px;
+  cursor: pointer;
+}
+
+div#num-more {
+  position: relative;
+  height: 15px;
+  width: 15px;
+  cursor: pointer;
+}
+
+div#num-less::before {
+  content: '';
+  width: 0;
+  height: 0;
+  position: absolute;
+  z-index: 10;
+  border: 7px solid transparent;
+  border-right: 9px solid #fff;
+  top: 0;
+  left: 0;
+}
+
+div#num-more::before {
+  content: '';
+  width: 0;
+  height: 0;
+  position: absolute;
+  z-index: 10;
+  border: 7px solid transparent;
+  border-left: 9px solid #fff;
+  top: 0;
+  left: 0;
+}
+
 #main {
   width: 100%;
   height: 100vh;
