--- a/modules/poker-probability/poker-probability.css
+++ b/modules/poker-probability/poker-probability.css
@@ -1,5 +1,6 @@
 * {
   margin: 0;
+  font-family: 'Roboto Condensed', sans-serif;
 }
 
 #board {
@@ -20,11 +21,42 @@
 .player-container {
   width: 50%;
   display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.player-container .hand {
+  width: 100%;
+  display: flex;
   flex-direction: row;
   justify-content: center;
 }
+
+@media (max-width: 768px) {
+  .player-container {
+    width: 100%;
+  }
+}
+
 .player-container h3 {
-  margin-right: 20px;
+  font-size: 25px;
+  text-align: center;
+  margin-bottom: 15px;
+}
+.player-container p {
+  text-align: center;
+  margin-top: 5px;
+  height: 20px;
+}
+#draw-odds {
+  height: 22px;
+  font-size: 20px;
+  width: 100%;
+  text-align: center;
+}
+
+.hidden {
+  opacity: 0;
+  pointer-events: none;
 }
 
 .card-container {
@@ -33,7 +65,7 @@
   align-items: center;
   background: #242423;
   border: 1px solid #242423;
-  border-radius: 5px;
+  border-radius: 6px;
   margin-right: 5px;
   position: relative;
   transition: all 0.3s ease-in-out;
