--- a/modules/poker-probability/poker-probability.css
+++ b/modules/poker-probability/poker-probability.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   font-family: 'Roboto Condensed', sans-serif;
+  box-sizing: border-box;
 }
 
 #board {
@@ -9,6 +10,45 @@
   height: 100vh;
   align-items: center;
   justify-content: center;
+  position: relative;
+}
+#card-list {
+  position: absolute;
+  pointer-events: none;
+  opacity: 0;
+  height: 100vh;
+  width: 100vw;
+  top: 0;
+  bottom: 0;
+  padding: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.3s ease-in-out;
+  background: #fff;
+  z-index: 10;
+}
+#card-list.show {
+  pointer-events: all;
+  opacity: 1;
+}
+#board #card-list .card-container-small {
+  width: 35px;
+  height: 70px;
+  cursor: pointer;
+  margin: 5px;
+  background: #fff;
+}
+#board #card-list .card-container-small:after {
+  top: 10px;
+  width: 10px;
+  height: 10px;
+  left: 30px;
+  font-size: 10px;
+}
+#board #card-list .card-container-small:hover {
+  opacity: 0.7;
 }
 
 #table {
@@ -41,6 +81,7 @@
   font-size: 25px;
   text-align: center;
   margin-bottom: 15px;
+  font-weight: 400;
 }
 .player-container p {
   text-align: center;
@@ -59,7 +100,8 @@
   pointer-events: none;
 }
 
-.card-container {
+.card-container,
+.card-container-small {
   width: 60px;
   height: 90px;
   align-items: center;
@@ -72,10 +114,15 @@
   cursor: pointer;
 }
 
-.card-container:hover {
+.card-container.active {
+  cursor: pointer;
+}
+
+.card-container.active:hover {
   opacity: 0.7;
 }
-.card-container:after {
+.card-container:after,
+.card-container-small:after {
   position: absolute;
   top: 35px;
   left: 20px;
@@ -89,6 +136,11 @@
   content: '+';
   font-size: 20px;
   z-index: 1;
+  transition: all 0.3s ease-in-out;
+  opacity: 0;
+}
+.card-container.active:after {
+  opacity: 1;
 }
 .card-container:last-of-type {
   margin-right: 0;
@@ -101,16 +153,19 @@
 .card-container.show {
   background: #fff;
 }
-.card-container.show.red p {
+.card-container.show.red p,
+.card-container-small.red p {
   color: #f60002;
 }
-.card-container.show p {
+.card-container.show p,
+.card-container-small p {
   text-align: center;
   margin-top: 15px;
   font-size: 20px;
   margin-bottom: 0;
 }
-.card-container.show p:last-of-type {
+.card-container.show p:last-of-type,
+.card-container-small p:last-of-type {
   font-size: 26px;
   margin: 0;
 }
