--- a/modules/poker-probability/poker-probability.css
+++ b/modules/poker-probability/poker-probability.css
@@ -51,6 +51,16 @@
   opacity: 0.7;
 }
 
+@media (max-width: 768px) {
+  #board #card-list .card-container-small p:first-of-type {
+    font-size: 16px;
+    margin-bottom: 3px;
+  }
+  #board #card-list .card-container-small p:last-of-type {
+    font-size: 17px;
+  }
+}
+
 #table {
   width: 100%;
   display: flex;
