--- a/modules/poker-probability/poker-probability.css
+++ b/modules/poker-probability/poker-probability.css
@@ -69,7 +69,7 @@
 }
 
 .player-container {
-  width: 50%;
+  width: auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -79,6 +79,19 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
+}
+.btns {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+.btns #remove {
+  margin-right: 10px;
+  margin-bottom: 10px;
+}
+.btns #add {
+  margin-bottom: 10px;
 }
 
 @media (max-width: 768px) {
@@ -99,12 +112,23 @@
   height: 20px;
 }
 
-.other-players {
+#other-players {
   width: 100%;
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
 }
-
+#other-players .player-container {
+  flex: 0 0 20%;
+  border-right: 1px solid #000;
+  padding: 10px;
+}
+#other-players .player-container h3 {
+  font-size: 18px;
+}
+#other-players .player-container p {
+  /* background: red; */
+}
 #draw-odds {
   height: 22px;
   font-size: 20px;
@@ -198,15 +222,16 @@
   }
 }
 
-button#run {
+button {
   cursor: pointer;
   padding: 10px 30px;
-  border: 2px solid #242423;
+  border: 1px solid #242423;
   color: #242423;
   text-transform: uppercase;
   background: #fff;
   transition: all 0.3s ease-in-out;
   margin-bottom: 10vh;
+  border-radius: 3px;
 }
 button#run:hover {
   background: #242423;
