updated apps description, simplified main page

--- a/modules/recipe-api-content/recipe-api-style.css
+++ b/modules/recipe-api-content/recipe-api-style.css
@@ -303,7 +303,9 @@ div#num-more::before {
 }
 
 #list .single img {
-  width: 170px;
+  /* width: 170px; */
+  height: 125px;
+  width: auto;
   margin-bottom: 7px;
 }
 #list .single h3 {
