--- a/modules/main-content/main-style.css
+++ b/modules/main-content/main-style.css
@@ -24,3 +24,21 @@ section:first-of-type {
   color: #0d6efd;
   padding-right: 5px;
 }
+
+.card-body {
+  display: flex;
+  flex-direction: column;
+  min-height: 230px;
+}
+
+@media (min-width: 534px) and (max-width: 768px) {
+  .card-body {
+    display: flex;
+    flex-direction: column;
+    min-height: 285px;
+  }
+}
+
+.card-body .btn-container {
+  margin-top: auto;
+}
