--- a/modules/poker-probability/poker-probability.css
+++ b/modules/poker-probability/poker-probability.css
@@ -4,6 +4,12 @@
   box-sizing: border-box;
 }
 
+*,
+*:hover,
+*:focus {
+  outline: none;
+}
+
 #board {
   display: flex;
   flex-wrap: wrap;
@@ -21,6 +27,15 @@
   top: 0;
   bottom: 0;
   padding: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.3s ease-in-out;
+  background: #fff;
+  z-index: 10;
+}
+#all-cards {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -79,19 +94,6 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-}
-.btns {
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-}
-.btns #remove {
-  margin-right: 10px;
-  margin-bottom: 10px;
-}
-.btns #add {
-  margin-bottom: 10px;
 }
 
 @media (max-width: 768px) {
@@ -236,10 +238,38 @@ button {
   text-transform: uppercase;
   background: #fff;
   transition: all 0.3s ease-in-out;
-  margin-bottom: 10vh;
   border-radius: 3px;
+}
+
+.btns {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+.btns button {
+  padding: 10px;
+  margin-bottom: 10px;
+  height: 42px;
+  width: 85px;
+  text-align: center;
+}
+
+@media (max-width: 565px) {
+  .btns button {
+    width: 70px;
+  }
+}
+
+button#run {
+  margin-bottom: 10vh;
 }
 button#run:hover {
   background: #242423;
   color: #fff;
+}
+
+button.disabled {
+  opacity: 0.6;
+  pointer-events: none;
 }
