--- a/modules/main-content/main-style.css
+++ b/modules/main-content/main-style.css
@@ -22,6 +22,11 @@ nav.bg-dark {
   background: #404f6f !important;
 }
 
+.navbar-expand-lg .navbar-nav {
+  width: 100%;
+  justify-content: space-between;
+}
+
 .navbar-toggler {
   border: none;
   color: transparent;
