--- a/modules/main-content/main-style.css
+++ b/modules/main-content/main-style.css
@@ -78,3 +78,19 @@ nav.bg-dark {
   color: #404f6f;
   border-color: #404f6f;
 }
+
+@media (max-width: 600px) {
+  .display-3 {
+    min-height: 105px;
+  }
+}
+@media (min-width: 601px) {
+  .display-3 {
+    min-height: 135px;
+  }
+}
+@media (min-width: 1200px) {
+  .display-3 {
+    min-height: auto;
+  }
+}
