--- a/modules/main-content/main-style.css
+++ b/modules/main-content/main-style.css
@@ -94,3 +94,21 @@ nav.bg-dark {
     min-height: auto;
   }
 }
+
+div.img-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+div.img-container img {
+  width: auto;
+  height: 170px;
+  filter: grayscale(1);
+  opacity: 0.7;
+  transition: all 0.3s ease-in-out;
+}
+
+div.img-container img:hover {
+  opacity: 1;
+  filter: grayscale(0);
+}
