--- a/snake/snake-style.css
+++ b/snake/snake-style.css
@@ -34,9 +34,9 @@ body {
   background: rgb(224, 79, 79);
   border: 0.25vmin solid #fff;
 }
-.food.eaten {
-  background: rgb(60, 109, 201);
-}
+/* .eaten {
+  background: black;
+} */
 /* 
 .cell {
   width: 20px;
