snake - game over logic finished

--- a/snake/snake-style.css
+++ b/snake/snake-style.css
@@ -88,12 +88,12 @@ body {
   left: 1.6vmin;
   width: 1.3vmin;
   height: 1.3vmin; */
-  top: 1vmin;
-  left: 1vmin;
-  bottom: 1vmin;
-  right: 1vmin;
-
-  background: rgb(224, 79, 79);
+  top: 0.25vmin;
+  left: 0.25vmin;
+  bottom: 0.25vmin;
+  right: 0.25vmin;
+  border: 2px solid rgb(224, 79, 79);
+  /* background: rgb(224, 79, 79); */
   /* border: 0.25vmin solid #000; */
 }
 
@@ -103,5 +103,5 @@ body {
 }
 
 #board.lost .overlay {
-  opacity: 0.5;
+  opacity: 0.6;
 }
