--- a/snake/snake-style.css
+++ b/snake/snake-style.css
@@ -60,9 +60,10 @@ body {
 }
 .game-over h2 {
   text-transform: uppercase;
-  color: rgb(60, 109, 201);
-  margin-bottom: 10px;
+  color: #6c6f7d;
+  margin-bottom: 20px;
   font-weight: 700;
+  font-size: 50px;
 }
 .game-over button {
   font-weight: 400;
