--- a/time-zones/time-zones-style.css
+++ b/time-zones/time-zones-style.css
@@ -11,7 +11,8 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  min-height: 100vh;
+  flex-direction: column;
 }
 
 #container {
