snake v2 - bigger snake speed progression

--- a/snake2/snake2-style.css
+++ b/snake2/snake2-style.css
@@ -36,7 +36,9 @@ body {
   bottom: 0;
   right: 0;
   padding: 10px;
-  font-size: 20px;
+  font-size: 30px;
+  font-weight: bold;
+  opacity: 0.3;
 }
 #board .overlay {
   content: '';
