--- a/snake2/snake2-style.css
+++ b/snake2/snake2-style.css
@@ -39,6 +39,8 @@ body {
   font-size: 30px;
   font-weight: bold;
   opacity: 0.3;
+  min-height: 10vmin;
+  min-width: 10vmin;
 }
 #board .overlay {
   content: '';
